fix: text overflow

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -250,6 +250,8 @@ body.layout-post {
     border: 1px solid #2f2a24;
     margin-bottom: 10px;
     margin-top: 10px;
+    max-width: 100%;
+    overflow-x: auto;
 }
 
 .language-text code {
